fix menu icon safari bug

--- a/client/src/Components/Header/menu.scss
+++ b/client/src/Components/Header/menu.scss
@@ -134,12 +134,10 @@
 
   .burger, .cross {
     position: relative;
-    background-color: white;
     width: 40px;
     height: 40px;
     left: 2px;
     top: -5px;
-    padding: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
