--- a/client/src/Components/Popups/popup.scss
+++ b/client/src/Components/Popups/popup.scss
@@ -11,7 +11,6 @@
     border-radius: 4px;
     text-align: left;
     z-index: 3000;
-    max-width: 360px;
     transition: all 0.3s ease;
     &.minimized {
         left: 80%;
