--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -53,7 +53,7 @@ h4 a, h4 a:hover, h4 a:focus, h4 a:active, h4 a:visited {
   text-underline-offset: 2px;
 }
 
-.mainpage, .islandaquabg, .graybg, .lightpurplebg {
+.mainpage, .islandaquabg, .graybg, .lightpurplebg, .pick-date-bg {
   position: fixed;
   background-color: $main-bg-color;
   background-repeat: repeat;
@@ -112,9 +112,8 @@ h4 a, h4 a:hover, h4 a:focus, h4 a:active, h4 a:visited {
   display: flex;
   flex-direction: column;
   align-items: center;
-  bottom: 70px;
   width: 80%;
-  margin-top: 90px;
+  margin: 5% 0 2%;
 }
 
 .main-link, .pick-date {
@@ -237,13 +236,21 @@ h4 a, h4 a:hover, h4 a:focus, h4 a:active, h4 a:visited {
 }
 
 
-@media only screen and (max-height: 800px) {
+@media only screen and (max-height: 700px) {
+  .main-title {
+    font-size: 4.5em;
+  }
+}
+
+
+@media only screen and (min-height: 700px) and (max-height: 800px) {
   .main-title {
     font-size: 5.5em;
   }
 }
 
 @media only screen and (max-width: 400px) {
+
   .main-title {
     font-size: 3.9em;
   }
